# scc

./: .gitignore  AUTHORS  LICENSE  Makefile  Makefile.am  README.md  configure.ac
src/: args.h  main.c  vec.c  vec.h
src/ast/: ast.c  ast.h
src/compiler/: compiler.c  compiler.h
src/implementation/c11/: lexer.c  lexer.h  parser.c  parser.h
src/utils/: args.c  args.h
